FIX: addTagForm button Card has overflow

--- a/src/app.css
+++ b/src/app.css
@@ -14,3 +14,7 @@
     Roboto,
     sans-serif;
 }
+/* Can not extend tailwind overflow for some reason. => Set as global class */
+.overflow-initial {
+  overflow: initial;
+}
